[metadata]
name = chord_eval
version = 1.0.0
licence = GPL-3 LGPL-3
url = https://github.com/apmcleod/harmonic_inference
author = Xavier Suermondt and Andrew McLeod
author_email = andrew.mcleod@epfl.ch
keywords = music harmony chord evaluation
description = A package for evaluating chord labels
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    License :: GPL-3
    Programming Language :: Python :: 3.8

[options]
zip_safe = False
include_package_data = True
packages =
    chord_eval
install_requires =
    librosa
    networkx
    pretty_midi
    pyfluidsynth
    seaborn
setup_requires =
    pytest-runner
python_requires =
    == 3.8.5
tests_require =
    pytest

[options.extras_require]
dev =
    black
    flake8
    ipykernel
    isort
    jupyter
    pre-commit
    pylint
    pytest

[aliases]
test = pytest
